# orchestra

./: .gitignore  ARCHITECTURE_REDESIGN.md  CLAUDE.md  README.md  debug_analysis_context.py  get-orchestra.py  install.sh  pyproject.toml  requirements.txt  test_analysis_context.py  test_hook.txt  test_timemachine.txt
.claude/: dev.py  settings.json  settings.local.json
.claude.bak/: settings.json
.claude/agents/: off-topic-detector.md  over-engineering-detector.md  planchecker.md  scope-creep-detector.md
.claude/commands/: focus.md
.claude/memories/: index.md
.claude/memory/: neveragain.md
.claude/orchestra/: bootstrap.py  bootstrap.sh  settings.json  task.json  tester.json  tester_calibrate.sh  tidy.json  timemachine.json
.claude/plans/: plan_2025-08-05_07-35-03.md  plan_2025-08-05_07-41-26.md
docs/: TODO.md  good-plan.md  plancheck-after.md  plancheck-before.md  plancheck-review.md  quick-test-reference.md  testing-guide.md  testing.md  tidy-extension.md  tool-reference.md
docs/memory/: rules.md  tester-extension-implementation.md
docs/plans/: tidy.md  timemachine.md
examples/: test_new_architecture.py
logs/0b85f1c1-6523-41ad-868c-9764374552a2/: chat.json  stop.json  user_prompt_submit.json
logs/38b2232c-521e-4511-973f-3bb8e61db79b/: chat.json  stop.json  user_prompt_submit.json
logs/539e80ed-50ef-489c-8c01-7ca8635a060d/: post_tool_use.json  pre_tool_use.json  subagent_stop.json  user_prompt_submit.json
logs/5b7ebfed-5f8c-4486-88ae-62ec0b47c57b/: post_tool_use.json  (+2 more)
src/: orchestra.py
tests/: PREDICATE_TESTS_SUMMARY.md  README.md  __init__.py  run_tests.py  test_claude_cli_direct.py  test_claude_cli_e2e.py  test_claude_cli_e2e_quick.py  test_claude_cli_wrapper.py  test_claude_invoker.py  test_deviation_detection.py  test_orchestra.py  test_predicate_integration.py  test_project_detector.py  test_task_monitor_integration.py  test_tidy_integration.py  test_tidy_monitor.py  test_tool_runners.py
(+122 files in other folders)
